--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* тут будуть глобальні стилі */
-ody {
+body {
     font-family: sans-serif;
     line-height: 1.5;
 }
@@ -12,6 +12,11 @@ h5,
 h6,
 p {
     margin: 0;
+    cursor: default;
+}
+
+button {
+    cursor: pointer;
 }
 
 ul,
@@ -23,4 +28,43 @@ ol {
 img {
     display: block;
     max-width: 100%;
+}
+
+body {
+    height: 100vh;
+    /* align-content: center; */
+}
+
+.container {
+    padding: 16px;
+    min-width: 320px;
+    max-width: 375px;
+}
+
+@media screen and (min-width: 375px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        padding: 32px;
+        width: 768px;
+        min-width: none;
+        max-width: none;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .container {
+        display: flex;
+        align-items: center;
+        width: 1440px;
+    }
+}
+
+.overflowHidden {
+    overflow: hidden;
 }
