--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -20,7 +20,9 @@
 
 .navigation {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    margin-bottom: 20px
+    margin-bottom: 20px;
+display: flex;
+flex-direction: column;
 }
 
 .navVision {
