робота із фоном та картинкою home page

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -30,7 +30,9 @@ flex-direction: column;
 }
 .menuContainer{
     position: fixed;
-        top: 0;
-        background-color: white;
-        z-index: 20;
+    top: 0;
+    left: 0;
+    background-color: white;
+    z-index: 20;
 }
+
