--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,10 @@ body {
 }
 
 .container {
-    padding: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 16px;
+    padding-left: 16px;
     min-width: 320px;
     max-width: 375px;
 }
