--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,31 @@
 /* тут будуть глобальні стилі */
 @font-face {
     font-family: 'ProximaNova';
-    src: url('./fonts/Proxima\ Nova\ Semibold\ Italic.otf') format('otf');
+    src: url('./fonts/ProximaNovaSemiboldItalic.otf') format('otf');
     font-weight: 600;
     font-style:italic;
 }
 @font-face {
     font-family: 'ProximaNova';
-    src: url('./fonts/proximanova-bold_1.otf') format('otf');
+    src: url('./fonts/proximanovaBold_1.otf') format('otf');
     font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'ProximaNova';
+    src: url('./fonts/proximanovaSemibold_0.otf') format('otf');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'ProximaNova';
+    src: url('./fonts/proximanovaRegular_0.otf') format('otf');
+    font-weight: 400;
     font-style: normal;
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     line-height: 1.5;
 }
 
