--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -25,6 +25,7 @@
     font-weight: 300;
     line-height: 1em;
     letter-spacing: 2.56px;
+    text-transform: uppercase;
 
     text-decoration: none;
     border: 1px solid #ffff;
