--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@
 body {
     font-family: 'ProximaNova', sans-serif;
     line-height: 1.5;
+    height: 100vh;
+
+    font-weight: 400;
 }
 
 * {
@@ -52,16 +55,12 @@ ul,
 ol {
     margin: 0;
     padding: 0;
+    list-style-type: none;
 }
 
 img {
     display: block;
     max-width: 100%;
-}
-
-body {
-    height: 100vh;
-    /* align-content: center; */
 }
 
 .container {
