--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url(../../images/main-bg.jpg);
+    background-image: url(../../images/mainBg.jpg);
     background-color: #2a2a2a;
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,7 +23,7 @@
 .heroBtn{
     font-size: 16px;
     font-weight: 300;
-    line-height: 1em;
+    line-height: 1;
     letter-spacing: 2.56px;
     text-transform: uppercase;
 
@@ -33,8 +33,78 @@
     padding: 14px 25px;
 
     color: #FFFFFF;
+
+    max-width: 143px;
 }
 .mainImg{
     width: 241px;
     margin-bottom: 40px;
+}
+.aboutLink {
+    padding-top: 60px;
+    margin-bottom: 17px;
+}
+.historyBox {
+padding: 11px 20px;
+
+border: 1px solid #000000;
+box-shadow: 3px 3px 0px 0px #000000;
+max-width: 182px;
+margin: 0 auto;
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+margin-bottom: 60px;
+}
+.historyLink{
+font-size: 16px;
+font-weight: 300;
+text-transform: uppercase;
+line-height: 1;
+letter-spacing: 1.6px;
+
+text-decoration: none;
+text-align: center;
+color: #474249;
+}
+.achiev{
+    margin-bottom: 65px;
+}
+.mission{
+    background-image: url(../../images/mission.jpg);
+    background-color: #2a2a2a;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.missionImg {
+    width: 255px;
+}
+.mission {
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    margin-bottom: 20px;
+}
+.missionBtn {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: 2.56px;
+    text-transform: uppercase;
+    
+    text-decoration: none;
+    border: 1px solid #ffff;
+    box-shadow: 3px 3px 0px 0px #FFFFFF;
+    padding: 14px 25px;
+    
+    color: #FFFFFF;
+    
+    max-width: 174px;
+    margin-bottom: 60px;
 }
