--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,7 +1,80 @@
 .footerSection{
     background-image: url(../../images/footer.jpg);
-        background-color: #2a2a2a;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+    background-color: #2a2a2a;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    padding-top: 20px;
+}
+
+.footerInformation{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+.footerInformation::after{
+    content: "";
+    width: 100%;
+    border: 1px solid white;
+    margin-bottom: 30px;
+}
+.footerLogo{
+    width: 100px;
+    height: 65px;
+    margin-bottom: 30px;
+}
+.footerNavigation {
+margin-bottom: 30px;
+}
+.footerNavItem{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.footerNavLink{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 1;
+    font-weight: 400;
+    color: #FFFFFF;
+}
+.footerCopy{
+    text-align: center;
+    font-size: 13px;
+    color: #FFFFFF;
+    line-height: 1.2em;
+
+    margin-bottom: 30px;
+}
+.footerName{
+    font-size: 14px;
+    color: #FFFFFF;
+    font-style: italic;
+    text-align: center;
+}
+.address{
+    font-size: 14px;
+    color: #FFFFFF;
+    font-style: italic;
+    text-align: center;
+
+    margin-bottom: 30px;
+}
+.footerLink{
+    font-size: 14px;
+    color: #FFFFFF;
+    font-style: italic;
+    text-decoration: none;
+    text-align: center;
+}
+.footerSocialMedia{
+    font-size: 12px;
+    font-style: italic;
+    text-align: center;
+    color: #FFFFFF
 }
