--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -19,10 +19,10 @@
 }
 
 .navigation {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     margin-bottom: 20px;
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
 }
 
 .navVision {
@@ -34,5 +34,14 @@ flex-direction: column;
     left: 0;
     background-color: white;
     z-index: 20;
+    width: 100%;
 }
+.closeIcon{
+    width: 25px;
+    height: 25px;
+    color: grey;
 
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
