--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -1,6 +1,6 @@
 .newsSection {
     padding-top: 30px;
-
+margin-bottom: 50px;
 }
 .title {
     color: #474249;
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 40px;
 }
 .subTitleWrap{
     width: 80px;
@@ -43,6 +44,7 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
 }
 .img {
     margin-bottom: 40px;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, .35), transparent 75%);
 }
 .description{    
     font-size: 21px;
