--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -10,6 +10,12 @@
 
     margin-bottom: 30px;
 }
+@media only screen and (min-width: 768px) {
+    .titleAbout {
+        font-size: 40px;
+        text-align: center;
+    }
+}
 .textMainAbout{
     font-size: 16px;
     line-height: 1.4;
@@ -19,11 +25,23 @@
 
     margin-bottom: 20px;
 }
-
+@media only screen and (min-width: 768px) {
+    .textMainAbout {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 1.6;
+    }
+}
 .textAbout{
     font-size: 17px;
     color: #888888;
     line-height: 1.5;
     text-align: justify;
     hyphens: auto;
+}
+@media only screen and (min-width: 768px) {
+    .textAbout {
+        font-size: 20px;
+        
+    }
 }
