--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -35,11 +35,17 @@ margin-bottom: 50px;
     bottom: 570px;
     right: 20px;
 }
+@media only screen and (min-width: 375px) {
+    .subTitleWrap {
+    bottom: 610px;
+    right: 15px;
+}
+}
 .subTitle{
 
 }
 .item{
-    position: relative;
+position: relative;
 box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
 }
 .img {
@@ -90,4 +96,12 @@ margin: 0 auto;
     border-top: 1px solid #eaeaea;
     font-size: 12px;
     color: #adadad;
+}
+.flagSvg {
+    width: 21px;
+    height: 21px;
+}
+.svgAndText {
+    display: inline-flex;
+    align-items: flex-start;
 }
