--- a/src/components/BackDrop/BackDrop.module.css
+++ b/src/components/BackDrop/BackDrop.module.css
@@ -1,6 +1,6 @@
 .backDrop {
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.247);
+    /* background-color: rgba(0, 0, 0, 0.247); */
     position: fixed;
     top: 0;
     bottom: 0;
