--- a/src/components/SubMenuBrands/SubMenuBrands.module.css
+++ b/src/components/SubMenuBrands/SubMenuBrands.module.css
@@ -10,3 +10,27 @@
     text-transform: uppercase;
     font-size: 14px;
 }
+@media only screen and (min-width: 768px) {
+    .subtitleList {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        padding-left: 25px;
+        padding: 15px;
+        background-color: #fff;
+
+        position: absolute;
+        top: 70px;
+        left: 130px;
+        max-width: 180px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .subtitleLink {
+        text-decoration: none;
+        color: black;
+        text-transform: uppercase;
+        font-size: 14px;
+    }
+}
