--- a/src/components/SubMenuBrands/SubMenuBrands.module.css
+++ b/src/components/SubMenuBrands/SubMenuBrands.module.css
@@ -21,8 +21,9 @@
 
         position: absolute;
         top: 70px;
-        left: 130px;
+        left: 200px;
         max-width: 180px;
+        z-index: 2;
     }
 }
 
