--- a/src/components/SubMenuAboutUs/SubMenuAboutUs.module.css
+++ b/src/components/SubMenuAboutUs/SubMenuAboutUs.module.css
@@ -20,8 +20,9 @@ font-size: 14px;
 
             position: absolute;
             top: 70px;
-            left: 20px;
+            left: 60px;
             max-width: 180px;
+            z-index: 2;
         }
 }
 @media only screen and (min-width: 768px) {
