--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -1,6 +1,12 @@
 .aboutSection {
     /* padding-top: 60px; */
 }
+@media only screen and (min-width: 768px) {
+.aboutWrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+}
 .titleAbout {
     font-size: 28px;
     color: #474249;
@@ -27,6 +33,11 @@
 }
 @media only screen and (min-width: 768px) {
     .textMainAbout {
+        hyphens: none;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .textMainAbout {
         font-size: 18px;
         font-weight: 400;
         line-height: 1.6;
@@ -42,6 +53,6 @@
 @media only screen and (min-width: 768px) {
     .textAbout {
         font-size: 20px;
-        
+        hyphens: none;
     }
 }
