--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -21,6 +21,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding-top: 20px;
 }
 
 .heroInformation {
