--- a/src/index.css
+++ b/src/index.css
@@ -81,18 +81,19 @@ img {
 
 @media screen and (min-width: 768px) {
     .container {
-        padding: 10px;
+        /* padding: 10px; */
         width: 768px;
         min-width: none;
         max-width: none;
     }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1024px) {
     .container {
         display: flex;
         align-items: center;
-        width: 1440px;
+        width: 1024px;
+        padding-top: 20px;
     }
 }
 
