--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -1,10 +1,20 @@
+@media only screen and (min-width: 1024px) {
 .aboutSection {
-    /* padding-top: 60px; */
+       background-image: url(../../images/hands.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
 @media only screen and (min-width: 768px) {
 .aboutWrapper {
     padding-left: 10px;
     padding-right: 10px;
+}
+}
+@media only screen and (min-width: 1024px) {
+.aboutWrapper {
+    max-width: 750px;
+    height: 410px;
 }
 }
 .titleAbout {
@@ -20,6 +30,11 @@
     .titleAbout {
         font-size: 40px;
         text-align: center;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .titleAbout {
+        padding-left: 250px;
     }
 }
 .textMainAbout{
@@ -49,6 +64,11 @@
     line-height: 1.5;
     text-align: justify;
     hyphens: auto;
+}
+@media only screen and (min-width: 1024px) {
+    .textAbout {
+        color: #474249;
+    }
 }
 @media only screen and (min-width: 768px) {
     .textAbout {
