--- a/src/pages/Brands/brands.module.css
+++ b/src/pages/Brands/brands.module.css
@@ -4,6 +4,12 @@
     align-items: center;
     justify-content: center;
 }
+@media only screen and (min-width: 1024px) {
+    .brandsSectionWrapper {
+        display: flex;
+        flex-direction: column;
+    }
+}
 .title {
     font-weight: 400;
     color: #474249;
