--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -22,6 +22,7 @@
     background-size: cover;
     background-position: center;
     padding-top: 20px;
+    margin-bottom: 30px;
 }
 
 .heroInformation {
@@ -174,11 +175,11 @@ margin-bottom: 0px;
         display: none;
     }
 }
-@media only screen and (max-width: 1024px) {
+/* @media only screen and (max-width: 1024px) {
 .historyBoxWrapper {
     position: relative;
     top: 50%;
     left: 50%;      
     transform: translate(-10%, -50%);
 }
-}
+} */
