--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -183,3 +183,13 @@ margin-bottom: 0px;
     transform: translate(-10%, -50%);
 }
 } */
+@media only screen and (min-width: 768px) {
+    .AboutUsAndHistiryWrapper {
+        background-image: url(../../images/hands.jpg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: right;
+        background-attachment: fixed;
+        /* min-height: 500px; */
+    }
+}
