--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -8,7 +8,6 @@
 @media only screen and (min-width: 1024px) {
 .aboutWrapper {
     max-width: 750px;
-    height: 410px;
 }
 }
 .titleAbout {
@@ -66,7 +65,6 @@
 }
 @media only screen and (min-width: 1024px) {
     .textAbout {
-        color: #474249;
-
+        margin-bottom: 0px;
     }
 }
