--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -127,14 +127,17 @@ color: #474249;
     
     margin-bottom: 20px;
 }
+
 @media only screen and (min-width: 768px) {
     .mission {
-margin-bottom: 0px;
+    margin-bottom: 0px;
+    padding: 30px;
     }
 }
 @media only screen and (min-width: 768px) {
     .mission {
-        padding: 30px;
+        padding-top: 80px;
+        padding-bottom: 80px;
     }
 }
 .missionImg {
