--- a/src/index.css
+++ b/src/index.css
@@ -90,13 +90,17 @@ img {
 
 @media screen and (min-width: 1024px) {
     .container {
-        display: flex;
+        /* display: flex; */
         align-items: center;
         width: 1024px;
         padding-top: 20px;
     }
 }
-
+@media screen and (min-width: 1440px) {
+.container {
+    width: 1440px;
+}
+}
 .overflowHidden {
     overflow: hidden;
 }
