--- a/src/components/NavigationList/NavigationList.module.css
+++ b/src/components/NavigationList/NavigationList.module.css
@@ -19,6 +19,11 @@
     color: #FFFFFF;
     text-decoration: none;
   }
+    @media only screen and (min-width: 1440px) {
+      .navigationItem {
+        font-size: 20px;
+      }
+    }
   .navigationSvg {
     width: 18px;
     height: 15px;
