--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -2,6 +2,15 @@
 padding-top: 30px;
 margin-bottom: 50px;
 }
+@media only screen and (min-width: 1440px) {
+    .newsSection {
+        background-image: url(../../images/brandsBG.jpg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: right;
+        background-attachment: fixed;
+    }
+}
 .title {
     color: #474249;
     font-size: 39px;
@@ -65,6 +74,11 @@ margin-bottom: 50px;
             bottom: 580px;
         }
 }
+@media only screen and (min-width: 1440px) {
+.subTitleWrap {
+    bottom: 570px;
+}
+}
 .subTitle{
 
 }
@@ -82,7 +96,11 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
     max-width: 480px;
 }
 }
-
+@media only screen and (min-width: 1440px) {
+.item {
+    max-width: 420px;
+}
+}
 .img {
     margin-bottom: 40px;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, .35), transparent 75%);
