--- a/src/pages/Brands/brands.module.css
+++ b/src/pages/Brands/brands.module.css
@@ -8,7 +8,7 @@
     .brandsSection {
         background-image: url(../../images/brandsBG.jpg);
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         background-position: right;
         background-attachment: fixed;
 
