--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -6,8 +6,13 @@
     background-position: center;
 
     padding-top: 20px;
+    padding-bottom: 10px;
 }
-
+@media only screen and (min-width: 768px) {
+    .footerSection {
+        padding-top: 0px;
+    }
+}
 @media only screen and (min-width: 1440px) {
     .footerSection {
         padding-bottom: 20px;
@@ -25,7 +30,7 @@ justify-content: center;
         justify-content: space-between;
         flex-wrap: wrap;
         margin-bottom: 20px;
-        align-items: flex-end;
+        /* align-items: flex-end; */
     }
 }
 .footerInformation::after{
@@ -185,7 +190,11 @@ margin-bottom: 30px;
     align-items: flex-start;
 }
 }
-
+@media only screen and (min-width: 1024px) {
+.nameAddressSocialMediaWrapper {
+    align-items: center;
+}
+}
 @media only screen and (max-width: 767px) {
 .bntUp {
     display: none;
@@ -220,12 +229,16 @@ margin-bottom: 30px;
     margin: 0 auto;
 }
 }
-
-@media only screen and (max-width: 1440px) {
 .socialMediaWrapper {
     display: flex;
+    flex-direction: column;
+}
+@media only screen and (min-width: 1024px) {
+.socialMediaWrapper {
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 }
 .logoBtn {
