--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -187,7 +187,7 @@ margin-bottom: 30px;
 .nameAddressSocialMediaWrapper {
     display: flex;
     gap: 50px;
-    align-items: flex-start;
+    align-items: center;
 }
 }
 @media only screen and (min-width: 1024px) {
@@ -233,10 +233,14 @@ margin-bottom: 30px;
     display: flex;
     flex-direction: column;
 }
+@media only screen and (min-width: 768px) {
+    .socialMediaWrapper {
+        flex-direction: row;
+        align-items: center;
+    }
+}
 @media only screen and (min-width: 1024px) {
-.socialMediaWrapper {
-    flex-direction: row;
-    align-items: center;
+.socialMediaWrapper {   
     justify-content: center;
     gap: 20px;
 }
