--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -1,6 +1,11 @@
 .missionSection {
     margin-bottom: 76px;
 }
+@media only screen and (min-width: 768px) {
+    .missionSection {
+        margin-bottom: 0px;
+    }
+}
 .mainTitle {
     display: none;
 }
@@ -21,11 +26,7 @@
 
 @media only screen and (min-width: 768px) {
     .mission {
-        margin-bottom: 0px;
-        padding-top: 30px;
-        padding-right: 30px;
-        padding-left: 30px;
-        padding-bottom: 70px;
+        padding: 100px;
     }
 }
 
@@ -52,16 +53,11 @@
 }
 @media only screen and (min-width: 768px) {
     .missionImg {
-        margin-bottom: 20px;
-        width: 273px;
+        width: 548px;       
     }
 }
 
-@media only screen and (min-width: 768px) {
-    .missionImg {
-        width: 355px;
-    }
-}
+
 .title {
     font-size: 37px;
     line-height: 1.3;
@@ -70,6 +66,11 @@
     text-align: center;
 
     margin-bottom: 20px;
+}
+@media only screen and (min-width: 768px) {
+.title {
+    font-size: 41px;
+}
 }
 .description {
     font-size: 18px;
@@ -88,6 +89,11 @@
 
     margin-bottom: 20px;
 }
+@media only screen and (min-width: 768px) {
+    .subTitle {
+        font-size: 28px;
+    }
+}
 .text {
     font-size: 16px;
     line-height: 1.4;
@@ -101,6 +107,38 @@
 .missionItem:last-child {
     margin-bottom: 0;
 }
+@media only screen and (min-width: 768px){
+.missionItem {
+        margin-bottom: 20px;
+    }
+    .missionItem:last-child {
+        margin-bottom: 0;
+    }
+}
 .missionlist {
     margin-bottom: 50px;
+}
+@media only screen and (min-width: 768px) {
+    .missionlist {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+            }
+}
+@media only screen and (min-width: 768px) {
+    .firstMissionList {
+        padding-left: 10px;
+        padding-right: 10px;
+        }
+}
+@media only screen and (min-width: 1024px) {
+    .firstMissionListWrap {
+    background-image: url(../../images/hands.jpg);
+    background-repeat: no-repeat;
+    background-size: 140%;
+    background-position: right;
+    background-attachment: fixed;
+
+    padding-left: 10px;
+    }
 }
