--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -13,7 +13,13 @@
         margin-bottom: 15px;
     }
 }
-
+@media only screen and (min-width: 1024px) {
+    .aboutSection {
+        padding-top: 150px;
+        align-items: flex-start;
+        margin-bottom: 0px;
+    }
+}
 .aboutUsImg {
     margin-bottom: 30px;
 }
@@ -21,6 +27,12 @@
     .aboutUsImg {
         width: 385px;
         object-fit: contain;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .aboutUsImg {
+        width: 513px;
+        margin-bottom: 0px;
     }
 }
 /************** стилі для AboutUsInformation ***********/
@@ -50,6 +62,14 @@
         max-width: 325px;
         }
 }
+@media only screen and (min-width: 1024px) {
+    .titleAbout{
+        margin-bottom: 25px;
+    }
+    .aboutWrapper {
+        max-width: 452px;
+    }
+}
 /* ********************************************************* */
 @media only screen and (min-width: 768px) {
 .brandsSection {
@@ -61,5 +81,11 @@
 
         padding-top: 70px;
         padding-bottom: 70px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .brandsSection {
+        padding-top: 0px;
+        padding-bottom: 0px;
     }
 }
