--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -27,19 +27,7 @@
 @media only screen and (min-width: 768px) {
     .mission {
         padding: 100px;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    .mission {
-        padding-top: 40px;
-    }
-}
-
-@media only screen and (min-width: 1440px) {
-    .mission {
-        padding-top: 100px;
-        padding-bottom: 100px;
+        margin-bottom: 0px;
     }
 }
 
@@ -56,7 +44,11 @@
         width: 548px;       
     }
 }
-
+@media only screen and (min-width: 1024px) {
+    .missionImg {
+            width: 620px;
+        }
+}
 
 .title {
     font-size: 37px;
@@ -129,6 +121,8 @@
     .firstMissionList {
         padding-left: 10px;
         padding-right: 10px;
+
+        max-width: 600px;
         }
 }
 @media only screen and (min-width: 1024px) {
@@ -138,6 +132,26 @@
     background-size: 140%;
     background-position: right;
     background-attachment: fixed;
+
+    padding-left: 10px;
+      }
+}
+@media only screen and (min-width: 1024px) {
+    .secondMissionList {
+        padding-left: 10px;
+        padding-right: 10px;
+    
+        max-width: 600px;
+        margin-left: 350px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .secondMissionListWrap {
+    background-image: url(../../images/aboutUs/aboutUsCup.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: left;
+    /* background-attachment: fixed; */
 
     padding-left: 10px;
     }
