зміни в main page

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,7 +9,7 @@
     }
 }
 .headerSection {
-    background-color: #3e3934;
+    background-color: #474249;
     padding-top: 60px;
 }
 @media only screen and (min-width: 768px) {
@@ -48,6 +48,7 @@
 @media only screen and (min-width: 768px) {
     .navigationBox {
         max-width: 600px;
+        position: relative;
     }
 }
 @media only screen and (min-width: 1024px) {
@@ -101,3 +102,19 @@
   .navigationSvg.open {
       transform: rotate(180deg);
   }
+  /* ***************************************************************** */
+
+.aboutUsFirstSubmenu {
+    position: absolute;
+    bottom: 110px;
+    right: 10px;
+    z-index: 2;
+    width: 100%;
+}
+.aboutUsSecondSubmenu {
+    position: absolute;
+    bottom: 110px;
+    right: 27px;
+    z-index: 2;
+    width: 100%;
+}
