--- a/src/components/AboutUsInformation/AboutUsInformation.module.css
+++ b/src/components/AboutUsInformation/AboutUsInformation.module.css
@@ -6,19 +6,19 @@
     .aboutWrapper {
         padding-left: 10px;
         padding-right: 10px;
-        max-width: 400px;
+        /* max-width: 400px; */
     }
 }
 
 @media only screen and (min-width: 1024px) {
     .aboutWrapper {
-        max-width: 550px;
+        max-width: 640px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .aboutWrapper {
-        max-width: 750px;
+        max-width: 900px;
     }
 }
 
@@ -39,10 +39,16 @@
         text-align: center;
     }
 }
-
+@media only screen and (min-width: 1024px) {
+.titleAbout {
+text-align: left;
+}
+    
+}
 @media only screen and (min-width: 1440px) {
     .titleAbout {
         font-size: 48px;
+        
     }
 }
 
