--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -22,7 +22,6 @@
     background-size: cover;
     background-position: center;
     padding-top: 20px;
-    margin-bottom: 30px;
 }
 
 .heroInformation {
@@ -92,7 +91,7 @@
 }
 @media only screen and (min-width: 1440px) {
     .aboutLink {
-        padding-top: 150px;
+        /* padding-top: 150px; */
     }
 }
 .historyBox {
@@ -113,7 +112,8 @@ margin-bottom: 60px;
 @media only screen and (min-width: 768px) {
     .historyBox {
         margin-bottom: 20px;
-    }
+        margin-left: 10px;   
+     }
 }
 @media only screen and (min-width: 1440px) {
     .historyBox {
@@ -138,6 +138,11 @@ color: #474249;
 @media only screen and (min-width: 768px) {
     .achiev {
         margin-bottom: 5px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+.achiev {
+        margin-bottom: 0px;
     }
 }
 .mission{
@@ -217,14 +222,21 @@ color: #474249;
     }
 }
 
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
     .AboutUsAndHistiryWrapper {
         background-image: url(../../images/hands.jpg);
         background-repeat: no-repeat;
         background-size: 140%;
-        /* background-size: contain; */
+        background-size: contain;
         background-position: right;
         background-attachment: fixed;
      }
+} */
+@media only screen and (min-width: 1024px) {
+    .AboutUsAndHistiryWrapper {
+        background-image: url(../../images/hands.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-attachment: fixed;
+    }
 }
-
