--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -20,9 +20,21 @@
         margin-bottom: 0px;
     }
 }
-.aboutUsImg {
-    margin-bottom: 30px;
+.aboutSectionBGI {
+    background-image: url(../../images/aboutUs/aboutUs.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 248px;
+    margin-bottom: 30px
 }
+@media only screen and (max-width: 767px) {
+.aboutUsImg {
+        display: none;
+    }
+}
+
 @media only screen and (min-width: 768px) {
     .aboutUsImg {
         width: 385px;
@@ -73,14 +85,14 @@
 /* ********************************************************* */
 @media only screen and (min-width: 768px) {
 .brandsSection {
-        background-image: url(../../images/brandsBG.jpg);
+        background-image: url(../../images/brands/aboutUs_left.jpg), url(../../images/brands/aboutUs_right.jpg);
         background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: right;
+        background-size: 28%, 30%;
+        background-position: top 120px left 0px, top 470px right 0px;
         background-attachment: fixed;
 
-        padding-top: 70px;
-        padding-bottom: 70px;
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
 }
 @media only screen and (min-width: 1024px) {
