--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -117,10 +117,10 @@
         gap: 20px;
             }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
     .firstMissionList {
-        padding-left: 10px;
-        padding-right: 10px;
+        /* padding-left: 10px;
+        padding-right: 10px; */
 
         max-width: 600px;
         }
