--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -20,6 +20,13 @@
         margin-bottom: 0px;
     }
 }
+@media only screen and (min-width: 1440px) {
+.aboutSection {
+    justify-content: center;
+    align-items: center;
+    padding-right: 20px;
+}
+}
 .aboutSectionBGI {
     background-image: url(../../images/aboutUs/aboutUs.jpg);
     background-repeat: no-repeat;
@@ -45,6 +52,11 @@
     .aboutUsImg {
         width: 513px;
         margin-bottom: 0px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .aboutUsImg {
+        width: 723px;
     }
 }
 /************** стилі для AboutUsInformation ***********/
@@ -80,6 +92,22 @@
     }
     .aboutWrapper {
         max-width: 452px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .titleAbout {
+        font-size: 48px;
+    }
+    .textMainAbout {
+        font-size: 21px;
+        }
+    .textAbout {
+        font-size: 18px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .aboutWrapper {
+    max-width: none;
     }
 }
 /* ********************************************************* */
