--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -64,6 +64,12 @@
     font-size: 41px;
 }
 }
+@media only screen and (min-width: 1440px) {
+.title {
+        font-size: 48px;
+        margin-bottom: 40px;
+    }
+}
 .description {
     font-size: 18px;
     line-height: 1.2;
@@ -72,6 +78,13 @@
     text-align: justify;
 
     margin-bottom: 30px;
+}
+@media only screen and (min-width: 1440px) {
+    .description {
+        font-size: 20px;
+        line-height: 1.3;
+        margin-bottom: 40px;
+    }
 }
 .subTitle {
     font-size: 25px;
@@ -118,12 +131,22 @@
             }
 }
 @media only screen and (min-width: 1024px) {
+    .missionlist {
+margin-bottom: 0px;
+    }
+}
+@media only screen and (min-width: 1024px) {
     .firstMissionList {
         /* padding-left: 10px;
         padding-right: 10px; */
 
         max-width: 600px;
         }
+}
+@media only screen and (min-width: 1440px) {
+.firstMissionList {
+    max-width: 900px;
+}
 }
 @media only screen and (min-width: 1024px) {
     .firstMissionListWrap {
@@ -136,6 +159,11 @@
     padding-left: 10px;
       }
 }
+@media only screen and (min-width: 1440px) {
+.firstMissionListWrap {
+    background-size: 85%;
+}
+}
 @media only screen and (min-width: 1024px) {
     .secondMissionList {
         padding-left: 10px;
@@ -143,6 +171,11 @@
     
         max-width: 600px;
         margin-left: 350px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .secondMissionList {
+        max-width: none;
     }
 }
 @media only screen and (min-width: 1024px) {
@@ -154,5 +187,10 @@
     /* background-attachment: fixed; */
 
     padding-left: 10px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .secondMissionListWrap {
+background-size: 40%;
     }
 }
