--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -111,7 +111,7 @@
     }
 }
 /* ********************************************************* */
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
 .brandsSection {
         background-image: url(../../images/brands/aboutUs_left.jpg), url(../../images/brands/aboutUs_right.jpg);
         background-repeat: no-repeat;
@@ -128,4 +128,4 @@
         padding-top: 0px;
         padding-bottom: 0px;
     }
-}
+} */
